# order-management-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: api_keys.json  customers.json  orders.json  refunds.json  transactions.json
manifest/: README.md  cluster.yaml  deployment.yaml  ingress.yaml  ingressclass.yaml  ingressclassparams.yaml  service.yaml
src/: __init__.py  config.py
src/api/: main.py
src/services/: database.py
