[project]
name = "order-management-api"
version = "0.1.0"
description = "REST API for order management database queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
api = "src.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
